<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_now_playing">Now playing</string>
    <string name="title_top_rated">Top rated</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_details">Movie details</string>
    <string name="poster">Movie Poster</string>
    <string name="looking_for">Looking for…</string>
    <string name="add_to_favorite">Add to favorite</string>
</resources>